<resources>
    <string name="app_name">TubesAndroid</string>
    <string name="login1">Login</string>
    <string name="login2">Untuk Masuk ke *Aplikasi Musik*, masukan Username dan Passwors anda di bawah ini</string>
    <string name="login3">Username</string>
    <string name="login4">Password</string>
    <string name="login5">Belum punya akun? DAFTAR</string>
    <string name="edit1">Farah Fitriavida A</string>
    <string name="edit2">Edit Profil</string>
    <string name="edit3">Playlist Publik</string>
    <string name="edit4">0</string>
    <string name="edit41">12</string>
    <string name="edit42">78</string>
    <string name="edit43">99</string>
    <string name="edit5">0 Pengikut</string>
    <string name="edit6">Profile</string>
    <string name="edit7">Favorite</string>
    <string name="edit8">Home</string>
    <string name="edit9">Massage</string>
    <string name="edit10">Search</string>
    <string name="cari1">Cari</string>
    <string name="cari2">Cari lagu yang kamu inginkan dengar sekarang disini ya</string>
    <string name="cari3">Hip-hop</string>
    <string name="cari4">Rock</string>
    <string name="cari5">EDM</string>
    <string name="cari6">Love</string>
    <string name="cari7">Relaxing</string>
    <string name="cari8">Famele</string>

    <string-array name="array_country">
        <item>HIP-HOP</item>
        <item>ROCK</item>
        <item>EDM</item>
        <item>LOVE</item>
        <item>RELAXING</item>
        <item>FAMELE</item>
    </string-array>

</resources>