<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="35dp"
        android:background="@drawable/awal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:src="@drawable/logomusic" />

        <TextView
            android:id="@+id/textSatu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login1"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/textDua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login2"
            android:textColor="@color/colorBlack"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <EditText
            android:id="@+id/EdittUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/EditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login4"
            android:inputType="textPassword"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/ButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login1"
            android:background="@color/colorBlack"
            android:textColor="@color/colorWhite"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kembali"
            android:background="@color/colorBlack"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>