<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:background="@color/colorBlack"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/cari1"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/cari2"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorAbu"
                android:radius="15dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:layout_marginLeft="30dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/Button1"
                            android:layout_width="150dp"
                            android:layout_height="130dp"
                            android:background="@drawable/rizky"
                            android:text="@string/cari3"
                            android:textColor="@color/colorWhite"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            app:srcCompat="@drawable/rizky" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:layout_marginLeft="50dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/Button2"
                            android:layout_width="150dp"
                            android:layout_height="130dp"
                            android:background="@drawable/rock"
                            android:text="@string/cari4"
                            android:textColor="@color/colorWhite"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            app:srcCompat="@drawable/afganDua" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:layout_marginLeft="30dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/Button3"
                            android:layout_width="150dp"
                            android:layout_height="130dp"
                            android:background="@drawable/edm2"
                            android:text="@string/cari5"
                            android:textColor="@color/colorWhite"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            app:srcCompat="@drawable/edm2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:layout_marginLeft="50dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/Button4"
                            android:layout_width="150dp"
                            android:layout_height="130dp"
                            android:background="@drawable/love"
                            android:text="@string/cari6"
                            android:textColor="@color/colorWhite"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            app:srcCompat="@drawable/love" />
                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:layout_marginLeft="30dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/Button5"
                            android:layout_width="150dp"
                            android:layout_height="130dp"
                            android:background="@drawable/relaxing"
                            android:text="@string/cari7"
                            android:textColor="@color/colorWhite"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            app:srcCompat="@drawable/relaxing" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:layout_marginLeft="50dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/Button6"
                            android:layout_width="150dp"
                            android:layout_height="130dp"
                            android:background="@drawable/famele"
                            android:text="@string/cari8"
                            android:textColor="@color/colorWhite"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            app:srcCompat="@drawable/famele" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="100dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton1"
                            android:layout_width="35dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/baseline_account_circle_black_18dp" />

                        <TextView
                            android:id="@+id/text7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit6"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="17dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/baseline_star_black_18dp"

                            />

                        <TextView
                            android:id="@+id/text8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit7"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="17dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton3"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/baseline_home_black_18dp"

                            />

                        <TextView
                            android:id="@+id/text9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit8"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="17dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton4"
                            android:layout_width="35dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/baseline_comment_black_18dp"

                            />

                        <TextView
                            android:id="@+id/text10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit9"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="17dp"
                        android:orientation="vertical">


                        <ImageButton
                            android:id="@+id/imageButton5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/baseline_search_black_18dp" />

                        <TextView
                            android:id="@+id/text11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit10"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>