<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="37dp"
                android:src="@drawable/playmusik"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="6dp"
                app:civ_shadow="true"
                app:civ_shadow_color="#8BC34A"
                app:civ_shadow_radius="10" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:button="center"
                android:text="@string/edit2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit3"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="186dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/play_musik" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="0"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="Pengikut"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="180dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/play_musik" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="0"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="Pengikut"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>